# Pixlie

./: .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  GEMINI.md  Makefile  README.md  RELEASE.md  SECURITY.md  WORK_PLAN.md  setup-hooks.sh  ui-tickets-llm-interaction.md
.cargo/: audit.toml  config.toml
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: build.yml  release.yml  rust-ci.yml  security.yml  webapp-ci.yml
pixlie/: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
pixlie/bindings/: ConfigResponse.ts  DownloadModelRequest.ts  DownloadStatusResponse.ts  Entity.ts  EntityItemWithHighlights.ts  EntityReference.ts  ExecuteToolRequestNew.ts  ExecuteToolResponse.ts  ExtractionStatusResponse.ts  GetEntitiesRequest.ts  GetEntityItemsRequest.ts  GetEntityItemsResponse.ts  GetRelationsRequest.ts  GetRelationsResponse.ts  GetToolSchemaResponse.ts  GetToolsResponse.ts  LLMQueryRequest.ts  ModelsResponse.ts  SearchEntitiesRequest.ts  SetDataFolderRequest.ts  StartDownloadRequest.ts  StartExtractionRequest.ts  ValidateToolParamsRequest.ts  ValidateToolParamsResponse.ts
pixlie/bindings/webapp/src/types/tools/: Entity.ts  EntityRelation.ts  EntityWithStats.ts  ExploreRelationsResponse.ts  FilterItemsParams.ts  FilterItemsResponse.ts  HnItem.ts  Parameter.ts  ParameterType.ts  QueryContext.ts  RelationWithEntities.ts  ScoreRange.ts  SearchEntitiesParams.ts  SearchEntitiesResponse.ts  SearchItemsParams.ts  SearchItemsResponse.ts  ToolArguments.ts  ToolCategory.ts  ToolConstraints.ts  ToolDescriptor.ts  ToolExample.ts  ToolMetrics.ts  ToolParameters.ts  ToolResult.ts  ToolSchema.ts  ToolSchemaExample.ts  ValidationResult.ts  ValidationWarning.ts
pixlie/src/: cli.rs  config.rs  database.rs  entity_extraction.rs  handlers.rs  hn_api.rs  lib.rs  logging.rs  main.rs
pixlie/src/conversation/: context.rs  executor.rs  manager.rs  mod.rs  planner.rs  storage.rs
pixlie/src/llm/: mock.rs  mod.rs  tool_registry.rs
pixlie/src/middleware/: mod.rs  request_tracking.rs
pixlie/src/tools/: data_query.rs  entity_analysis.rs  mod.rs  relation_exploration.rs  schemas.rs  tests.rs  types.rs
pixlie/tests/: api_tests.rs  conversation_tests.rs  export_types_tests.rs  llm_tests.rs
scripts/: build-release.sh  generate-checksums.sh  update-version.sh
src/: error.rs  lib.rs  logging.rs  main.rs
src/config/: loader.rs  mod.rs  settings.rs  workspace.rs
src/tui/: app.rs  events.rs  layout.rs  mod.rs
src/tui/components/: mod.rs  settings.rs  workspace_manager.rs  workspace_picker.rs
test-workspace-local/: .pixlie-workspace.toml
webapp/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
webapp/src/: App.tsx  main.tsx
webapp/src/components/: Dashboard.tsx  Entities.tsx  EntityBrowser.tsx  EntityDetailModal.tsx  EntityList.tsx  EntitySearchBar.tsx  HnItems.tsx  Navigation.tsx  RelationshipGraph.tsx  Settings.tsx  TextHighlighter.tsx
webapp/src/components/Chat/: ChatInterface.tsx  MessageList.tsx  ToolExecutionDisplay.tsx  TypingIndicator.tsx  index.ts
webapp/src/components/LLM/: ToolExecutionModal.tsx  ToolExecutionTimeline.tsx  ToolMetricsDisplay.tsx  index.ts
webapp/src/components/QueryBuilder/: QueryBuilder.tsx  QueryParameterInput.tsx  (+2 more)
webapp/src/pages/: ChatPage.tsx  EntitiesPage.tsx  EntityDetailPage.tsx  EntityGraphPage.tsx
webapp/src/test/: setup.ts
webapp/src/types/: ConfigResponse.d.ts  ConfigResponse.ts  DownloadModelRequest.d.ts  DownloadModelRequest.ts  DownloadStats.d.ts  DownloadStats.ts  DownloadStatusResponse.d.ts  DownloadStatusResponse.js  DownloadStatusResponse.ts  Entity.ts  EntityDetailResponse.ts  EntityItemWithHighlights.ts  EntityReference.ts  EntityRelation.ts  ExecuteToolRequestNew.ts  ExecuteToolResponse.ts  ExploreRelationsParams.ts  ExtractionStats.d.ts  ExtractionStats.ts  ExtractionStatusResponse.d.ts  ExtractionStatusResponse.ts  FilterItemsResponse.ts  GetEntitiesResponse.ts  GetEntityItemsResponse.ts  GetEntityReferencesRequest.ts  GetEntityReferencesResponse.ts  GetItemsRequest.d.ts  GetItemsRequest.ts  GetItemsResponse.d.ts  GetItemsResponse.ts  GetRelationsRequest.ts  GetRelationsResponse.ts  GetToolSchemaResponse.ts  GetToolsResponse.ts  HnItem.d.ts  HnItem.ts  ModelInfo.d.ts  ModelInfo.ts  ModelsResponse.d.ts  ModelsResponse.ts  (+30 more)
website/: package.json  pnpm-lock.yaml
website/src/components/: Architecture.astro  Features.astro  HowItWorks.astro  UpcomingFeatures.astro
website/src/layouts/: Layout.astro
website/src/pages/: index.astro
website/src/styles/: global.css
(+75 files in other folders)
