[package]
name = "pixlie"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data-analyzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
