[package]
name = "pixlie"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data-analyzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5.0"
dotenvy = "0.15"
ratatui = "0.26"
crossterm = "0.27"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
