[package]
name = "pixlie"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.5"
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "derive"], default-features = false }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
gline-rs = "1.0"
ts-rs = { version = "8.0", features = ["chrono"] }
async-trait = "0.1"
thiserror = "1.0"

[dev-dependencies]
actix-rt = "2.9.0"
tempfile = "3.10.1"

[[bin]]
name = "export_types"
path = "src/bin/export_types.rs"
